--- a/frontend/src/app/inventory/product/product-update.component.html
+++ b/frontend/src/app/inventory/product/product-update.component.html
@@ -25,26 +25,26 @@
           <!-- column -->
           <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
             <mat-form-field>
-              <input matInput placeholder="Código de barras" name="codigo" [(ngModel)]="entity.codigo">
+              <input matInput placeholder="Código de barras" name="codigo" type="text" maxlength="150" (keypress)="checkCharactersAndNumbersOnly($event)" [(ngModel)]="entity.codigo">
             </mat-form-field>
           </div>
 
           <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
             <mat-form-field>
-              <input matInput placeholder="Descripción" name="nombre" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
+              <input matInput placeholder="Descripción" name="nombre" type="text" maxlength="150" (keypress)="checkCharactersOnly($event)" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
             </mat-form-field>
             <mat-hint *ngIf="form.controls['fnombre'].hasError('required') && form.controls['fnombre'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
-            <mat-hint *ngIf="form.controls['fnombre'].hasError('maxlength') && form.controls['fnombre'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
           </div>
 
           <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
             <mat-form-field>
-              <mat-select placeholder="Unidad de medida" [(ngModel)]="entity.unidadDeMedida" name="unit"  (ngModelChange)="clearUnidadesDetalle()">
+              <mat-select placeholder="Unidad de medida" [(ngModel)]="entity.unidadDeMedida" name="unit"  (ngModelChange)="clearUnidadesDetalle()" [formControl]="form.controls['funidadDeMedida']">
                 <mat-option *ngFor="let unit of unidadesDeMedida" [value]="unit">
                   {{unit}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
+            <mat-hint *ngIf="form.controls['funidadDeMedida'].hasError('required') && form.controls['funidadDeMedida'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
           </div>
 
           <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
@@ -93,20 +93,18 @@
           <!-- column -->
           <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
             <mat-form-field>
-              <input matInput placeholder="Precio de Venta" name="precioVenta" [(ngModel)]="entity.precioVenta" [formControl]="form.controls['fprecioVenta']">
+              <input matInput placeholder="Precio de Venta" name="precioVenta" type="text" maxlength="10" (keypress)="checkNumbersDecimalOnly($event)" [(ngModel)]="entity.precioVenta" [formControl]="form.controls['fprecioVenta']">
               <span matPrefix>S&nbsp;</span>
             </mat-form-field>
             <mat-hint *ngIf="form.controls['fprecioVenta'].hasError('required') && form.controls['fprecioVenta'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
-            <mat-hint *ngIf="form.controls['fprecioVenta'].hasError('maxlength') && form.controls['fprecioVenta'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
           </div>
 
           <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
             <mat-form-field>
-              <input matInput placeholder="Precio de Compra" name="precioCompra" [(ngModel)]="entity.precioCompra" [formControl]="form.controls['fprecioCompra']">
+              <input matInput placeholder="Precio de Compra" name="precioCompra" type="text" maxlength="10" (keypress)="checkNumbersDecimalOnly($event)" [(ngModel)]="entity.precioCompra" [formControl]="form.controls['fprecioCompra']">
               <span matPrefix>S&nbsp;</span>
             </mat-form-field>
             <mat-hint *ngIf="form.controls['fprecioCompra'].hasError('required') && form.controls['fprecioCompra'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
-            <mat-hint *ngIf="form.controls['fprecioCompra'].hasError('maxlength') && form.controls['fprecioCompra'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
           </div>
 
           <div fxFlex="100" class="p-10">
@@ -145,7 +143,7 @@
               <mat-header-cell *matHeaderCellDef> Cantidad </mat-header-cell>
               <mat-cell *matCellDef="let row;let i = index">
                 <span class="header-label">Cantidad:</span>
-                <input matInput placeholder="Cantidad" type="text" (blur)="saveChangesInVariantRow($event, i, 'cantidad')" value="{{row.cantidad}}">
+                <input matInput placeholder="Cantidad" type="text" maxlength="10" (keypress)="checkNumbersOnly($event)" (blur)="saveChangesInVariantRow($event, i, 'cantidad')" value="{{row.cantidad}}">
               </mat-cell>
             </ng-container>
 
@@ -153,7 +151,7 @@
               <mat-header-cell *matHeaderCellDef> Precio </mat-header-cell>
               <mat-cell *matCellDef="let row;let i = index">
                 <span class="header-label">Precio:</span>
-                <input type="number" matInput placeholder="Precio" (blur)="saveChangesInVariantRow($event, i, 'precioCompra')" value="{{row.precioCompra}}">
+                <input matInput placeholder="Precio" type="text" maxlength="10" (keypress)="checkNumbersDecimalOnly($event)" (blur)="saveChangesInVariantRow($event, i, 'precioCompra')" value="{{row.precioCompra}}">
               </mat-cell>
             </ng-container>
 
@@ -188,7 +186,7 @@
                 <mat-header-cell *matHeaderCellDef> Cantidad </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Cantidad:</span>
-                  <input *ngIf="row.esPrincipal" matInput placeholder="Cantidad" type="text" value="{{row.cantidad}}" disabled>
+                  <input *ngIf="row.esPrincipal" matInput placeholder="Cantidad" type="text" maxlength="10" (keypress)="checkNumbersOnly($event)" value="{{row.cantidad}}" (blur)="updateStock($event)">
                   <div *ngIf="!row.esPrincipal">
                     <span class="header-label">Cantidad:</span>
                     {{row.cantidad}}
