barra de busqueda con boton como nuevo componente con estilos y mejora de estilos a la tarjeta de productos en venta

--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -21,7 +21,8 @@
     <mat-card-content>
 
       <div fxLayout="row wrap">
-        <mat-form-field fxFlex.gt-sm="100" fxFlex="100">
+          <button mat-icon-button color= "primary" (click)="search(currentSearch)"><mat-icon>search</mat-icon></button>
+        <mat-form-field fxFlex.gt-sm="80" fxFlex="80">
           <input matInput [(ngModel)]="currentSearchProduct" placeholder="Buscar" (keyup.enter)="searchProduct(currentSearchProduct)" >
         </mat-form-field>
       </div>
@@ -30,20 +31,22 @@
 
         <div fxFlex.gt-lg="25" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxFlex="100" *ngFor="let product of productos ">
           <mat-card class="oh">
-            <img mat-card-image [src]="product.imagen ? 'data:' + product.imagenContentType + ';base64,' + product.imagen : 'assets/images/big/img1.jpg'" alt="Photo of a Shiba Inu">
               <h6 class="m-0">S/. {{product.precioVenta}}</h6>
-              <h6 class="m-0">stock: {{product.stock}}</h6>
+            <img mat-card-image [src]="product.imagen ? 'data:' + product.imagenContentType + ';base64,' + product.imagen : 'assets/images/big/img1.jpg'" alt="Photo of a Shiba Inu">
+              <!--<h6 class="m-0">stock: {{product.stock}}</h6>-->
+              <h6 class="m-0">{{product.stock}}</h6>
               <small>{{product.nombre}}</small>
           </mat-card>
         </div>
       </div>
-
+      <div>
+      </div>
     </mat-card-content>
   </mat-card>
 
   <mat-card fxFlex.gt-lg="47" fxFlex.gt-md="47" fxFlex.gt-sm="47" fxFlex="100">
     <mat-card-content>
-      <mat-card-title>Venta {{!entity.id ? 'Nuevo' : 'Edición'}} </mat-card-title>
+      <mat-card-title>{{!entity.id ? 'Nueva' : 'Edición'}} Venta</mat-card-title>
       <form class="basic-form">
         <div fxLayout="row wrap">
           <div class="responsive-table">
@@ -62,7 +65,7 @@
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Producto:</span>
                   <input matInput placeholder="Producto" type="text" maxlength="10" (blur)="saveChangesInProductosDetallesRow($event, i, 'producto')" value="{{row.producto}}" disabled>
-                </mat-cell>
+                </mat-cell> 
               </ng-container>
 
               <ng-container matColumnDef="precioVenta">
