--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -7,3 +7,57 @@
     display: none;
   }
 }
+
+// search bar style
+.mat-icon-button{
+  display: inline-block;
+  margin-top: 10px;
+  background-color: #1e88e5;
+  border-radius: 2px;
+  margin-right: 10px;
+}
+
+.mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary{
+  color: white;
+}
+
+input.mat-input-element{
+  margin-top: 5px;
+}
+//
+
+// product card component style
+.mat-card-image{
+  border-radius: initial;
+  margin-bottom: -12px;
+}
+
+.m-0 {
+opacity: 0.7;
+color: #fff !important;
+font-size: 12px;
+font-weight: bold;
+width: 100%;
+background-color: black;
+padding: 2px 2px 2px 4px;
+white-space: nowrap;
+display: inline-block;
+margin-top: 6px;
+}
+
+.oh mat-card{
+  text-align: right;
+}
+
+.mat-card-content > :first-child, .mat-card > :first-child{
+  margin-top: 0;
+  text-align: right;
+}
+
+.mat-elevation-z8{
+  text-align: initial;
+}
+
+.p-10{
+  justify-content: flex-end;
+}
