--- a/frontend/src/app/ventas/sell/sell.component.scss
+++ b/frontend/src/app/ventas/sell/sell.component.scss
@@ -9,7 +9,23 @@
 mat-cell:last-of-type, mat-footer-cell:last-of-type, mat-header-cell:last-of-type {
   padding-right: 0 !important;
 }
+// Search bar style
+.mat-icon-button{
+  display: inline-block;
+  margin-top: 10px;
+  background-color: #1e88e5;
+  border-radius: 2px;
+  margin-right: 10px;
+}
 
+.mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary{
+  color: white;
+}
+
+input.mat-input-element{
+  margin-top: 5px;
+}
+//
 .example-form {
   min-width: 150px;
   max-width: 500px;
